{
  "version": 4,
  "terraform_version": "1.4.1",
  "serial": 9,
  "lineage": "7ac972bd-19d6-08e8-4fe1-78518c4ccced",
  "resources": [
    {
      "module": "module.instance_ready",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c9978668f8d55984",
            "arn": "arn:aws:ec2:us-east-1:363577284662:instance/i-04ce33de110ee9976",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ce33de110ee9976",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02c766826e26261f6",
            "private_dns": "ip-10-0-1-227.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.227",
            "public_dns": "ec2-3-83-39-39.compute-1.amazonaws.com",
            "public_ip": "3.83.39.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0973c9e2b0b55d130",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1b249ab59520ab8",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098c6a72703f59828"
            ]
          },
          "dependencies": [
            "module.instance_ready.aws_security_group.my_sg",
            "module.instance_ready.aws_subnet.my-subnet-public",
            "module.instance_ready.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_ready",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:363577284662:internet-gateway/igw-0ff6e42eb4b465615",
            "id": "igw-0ff6e42eb4b465615",
            "owner_id": "363577284662",
            "tags": {
              "Name": "my_created_igw"
            },
            "tags_all": {
              "Name": "my_created_igw"
            },
            "vpc_id": "vpc-0b370db74bba60ef4"
          },
          "dependencies": [
            "module.instance_ready.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_ready",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:363577284662:route-table/rtb-036e54cdd10d93a7c",
            "id": "rtb-036e54cdd10d93a7c",
            "owner_id": "363577284662",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff6e42eb4b465615",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_created_rt"
            },
            "tags_all": {
              "Name": "my_created_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b370db74bba60ef4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance_ready.aws_internet_gateway.my_igw",
            "module.instance_ready.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_ready",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ade9729231716138",
            "route_table_id": "rtb-036e54cdd10d93a7c",
            "subnet_id": "subnet-0d1b249ab59520ab8"
          },
          "dependencies": [
            "module.instance_ready.aws_internet_gateway.my_igw",
            "module.instance_ready.aws_route_table.my_route_table",
            "module.instance_ready.aws_subnet.my-subnet-public",
            "module.instance_ready.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_ready",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:363577284662:security-group/sg-098c6a72703f59828",
            "description": "my_sg_trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098c6a72703f59828",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "22 port allow",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80 port allow",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230510165102453500000001",
            "name_prefix": "terraform-",
            "owner_id": "363577284662",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_created_sg"
            },
            "tags_all": {
              "Name": "my_created_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b370db74bba60ef4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance_ready.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_ready",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:363577284662:subnet/subnet-0abc2d13d5a7beecb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abc2d13d5a7beecb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "363577284662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1b"
            },
            "tags_all": {
              "Name": "private-subnet-1b"
            },
            "vpc_id": "vpc-0b370db74bba60ef4"
          },
          "dependencies": [
            "module.instance_ready.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_ready",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:363577284662:subnet/subnet-0d1b249ab59520ab8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1b249ab59520ab8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "363577284662",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1a"
            },
            "tags_all": {
              "Name": "public-subnet-1a"
            },
            "vpc_id": "vpc-0b370db74bba60ef4"
          },
          "dependencies": [
            "module.instance_ready.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_ready",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:363577284662:vpc/vpc-0b370db74bba60ef4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a40077d74fab207a",
            "default_route_table_id": "rtb-0100fdc8e18088744",
            "default_security_group_id": "sg-0bfc07e883b8ec0ad",
            "dhcp_options_id": "dopt-01e640479c752f352",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b370db74bba60ef4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0100fdc8e18088744",
            "owner_id": "363577284662",
            "tags": {
              "Name": "my_created_vpc"
            },
            "tags_all": {
              "Name": "my_created_vpc"
            }
          }
        }
      ]
    }
  ]
}